--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+	margin: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ml-10 {
+	margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.card-gallery {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+	width: calc(25% - 20px);
+	margin-bottom: 20px;
+	border: 1px solid #e8e8e8;
+	overflow: hidden;
+	font-size: 14px;
+}
+
+.card:nth-child(4n) {
+	margin-right: 0;
+}
+
+.card-image {
+	display: flex;
+	justify-content: center;
+	background-color: #f5f5f5;
+}
+
+.card-image img {
+	width: 200px;
+	height: 200px;
+}
+
+.card-details {
+	padding: 24px;
+}
+
+.card-details > h3 {
+	margin-top: 0;
+	margin-bottom: 0.5em;
+	color: rgba(0, 0, 0, 0.85);
+	font-weight: 500;
+}
+
+.contact-info {
+	display: flex;
+	flex-direction: column;
+}
+
+.contact-item {
+	display: flex;
+	align-items: center;
+}
+
+.contact-item svg {
+	font-size: 18px;
+}
+
+.card-icons {
+	display: flex;
+	justify-content: center;
+	padding: 10px;
+	background: #fafafa;
+	border-top: 1px solid #e8e8e8;
+}
+
+.card-icons > li {
+	flex: 33.33;
+}
+
+.card-icons > li:not(:last-child) {
+	border-right: 1px solid #e8e8e8;
+}
+
+@media screen and (max-width: 1200px) {
+	.card {
+		width: calc(33.33% - 20px);
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.card {
+		width: calc(100% - 20px);
+		margin: 0 auto;
+	}
+	.card-gallery {
+		gap: 20px;
+		margin: 15px auto;
+	}
 }
