--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,9 @@ ul {
 .card-gallery {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
-	margin: 15px;
+	gap:20px;
+	margin: 15px ;
+	margin-left: 30px;
 }
 
 .card {
@@ -32,7 +33,7 @@ ul {
 }
 
 .card:nth-child(4n) {
-	margin-right: 0;
+	/* margin-right: 0; */
 }
 
 .card-image {
@@ -96,8 +97,11 @@ ul {
 }
 
 .icon-btn i {
-	color: rgb(255, 0, 0);
 	font-size: 20px;
+}
+
+.like-icon {
+	color: rgb(255, 0, 0);
 }
 
 @media screen and (max-width: 1200px) {
